# itmo_dl

./: .gitignore  README.md  pyproject.toml
contest/: answer.csv  contest.ipynb  test.csv  train.csv
extra_task_1/: extra_task_1.ipynb
extra_task_2/: extra_task_2.ipynb  extra_task_2.md
extra_task_3/: extra_task_3.ipynb
extra_task_4/: extra_task_4.ipynb
hw_1/: hw_1.ipynb  hw_1.md
hw_2/: hw_2.ipynb  hw_2.md
