[tool.poetry]
name = "itmo-dl"
version = "0.1.0"
description = ""
authors = ["nikolai hilkovich <n.hilkovich@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.4"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = "^2.5.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.0"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.0"
torchvision = "^0.20.1"
pytorch-lightning = "^2.5.0.post0"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
